Logo and indentation  Gerard

--- a/user-interface/index.html
+++ b/user-interface/index.html
@@ -43,12 +43,12 @@
               <div class="header__upper--left">
                 <div class="d-none d-lg-block logo">
                   <a href="index.html"
-                    ><img src="assets/images/logo-main.webp" alt="Site Logo"
+                    ><img src="assets/assets/images/YENKOR LOGO.jpg" alt="Site Logo"
                   /></a>
                 </div>
                 <div class="d-block d-lg-none logo w-49px">
                   <a href="index.html"
-                    ><img src="assets/images/logo-icon.webp" alt="Site Logo"
+                    ><img src="assets/assets/images/YENKOR LOGO.jpg" alt="Site Logo"
                   /></a>
                 </div>
                 <div class="search-bar">
@@ -221,7 +221,7 @@
         <div class="logo">
           <a href="index.html"
             ><img
-              src="assets/images/logo-main.webp"
+              src="assets/assets/images/YENKOR LOGO.jpg"
               width="122"
               height="32"
               alt="Site Logo"
@@ -759,7 +759,7 @@
             <div class="col-lg-3 col-sm-6">
               <div class="footer-brand">
                 <a href="index.html"
-                  ><img src="assets/images/logo.webp" alt="Logo"
+                  ><img src="assets/assets/images/YENKOR LOGO.jpg" alt="Logo"
                 /></a>
               </div>
               <div class="footer-text pe-lg-3">
