Titi Submission By Gerard

--- a/user-interface/sign-up.html
+++ b/user-interface/sign-up.html
@@ -2,192 +2,214 @@
 <html class="no-js" lang="en">
 
 <!-- Mirrored from carrgohtml.tortoizthemes.com/sign-up by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 21 Aug 2024 19:21:53 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
-<title>CarrGo - Ridesharing Taxi HTML Template</title>
-<meta name="description" content>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.webp">
-<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/plugins/shortcode/shortcode.css">
-<link rel="stylesheet" href="assets/plugins/animate/animate.css">
-<link rel="stylesheet" href="assets/plugins/OwlCarousel/owl.carousel.min.css">
-<link rel="stylesheet" href="assets/plugins/metismenu/css/metismenu.html">
-<link rel="stylesheet" href="main/css/style.css">
+    <title>CarrGo - Ridesharing Taxi HTML Template</title>
+    <meta name="description" content>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.webp">
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/plugins/shortcode/shortcode.css">
+    <link rel="stylesheet" href="assets/plugins/animate/animate.css">
+    <link rel="stylesheet" href="assets/plugins/OwlCarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/plugins/metismenu/css/metismenu.html">
+    <link rel="stylesheet" href="main/css/style.css">
 </head>
+
 <body class="striped-bg theme-3">
-<header class="theme-3">
-<div class="container">
-<div class="row">
-<div class="col-lg-12 text-center">
-<div class="logo">
-<a href="index.html"><img src="assets/images/logo-main.webp" alt></a>
-</div>
-</div>
-</div>
-</div>
-</header>
-<div class="div-padding p-t-0 signup-div user-access-bg">
-<div class="container">
-<div class="row">
-<div class="col-lg-6 offset-lg-3 text-center">
-<h1 class="h3 mb-3 fw-normal">Please Sign Up</h1>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-6 offset-lg-3">
-<div class="account-access sign-up">
-<ul class="nav nav-tabs" role="tablist">
-<li role="presentation" class="active">
-<a href="#rider" class="active" aria-controls="rider" role="tab" data-toggle="tab">Sign up to Ride</a>
-</li>
-<li role="presentation">
-<a href="#driver" aria-controls="driver" role="tab" data-toggle="tab">Sign up to Drive</a>
-</li>
-</ul>
-<div class="tab-content">
-<div role="tabpanel" class="tab-pane active" id="rider">
-<form class="user-access-form">
-<div class="row">
-<div class="col-lg-6">
-<div class="form-floating">
-<input type="text" class="form-control" id="exampleFirstName" placeholder="name@example.com">
-<label for="exampleFirstName">First Name</label>
-</div>
-</div>
-<div class="col-lg-6">
-<div class="form-floating">
-<input type="text" class="form-control" id="exampleLastName" placeholder="name@example.com">
-<label for="exampleLastName">Last Name</label>
-</div>
-</div>
-</div>
-<div class="form-floating">
-<input type="text" class="form-control" id="examplePhone" placeholder="Phone number">
-<label for="examplePhone">Phone Number</label>
-</div>
-<div class="form-floating">
-<input type="email" class="form-control" id="exampleEmail" placeholder="Email">
-<label for="exampleEmail">Email</label>
-</div>
-<div class="form-floating">
-<input type="password" class="form-control" id="examplePass" placeholder="Create Password">
-<label for="examplePass">Password</label>
-</div>
-<button type="submit" class="w-100 btn btn-lg btn-primary">Sign Up</button>
-</form>
-<p class="acclink">Already have an account?
-<a href="sign-in.html">Sign in
-<i class="icofont">double_right</i>
-</a>
-</p>
-</div>
-<div role="tabpanel" class="tab-pane" id="driver">
-<form class="user-access-form">
-<div class="row">
-<div class="col-lg-6">
-<div class="form-floating">
-<input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-<label for="floatingInput">First Name</label>
-</div>
-</div>
-<div class="col-lg-6">
-<div class="form-floating">
-<input type="text" class="form-control" id="floatingLName" placeholder="name@example.com">
-<label for="floatingLName">Last Name</label>
-</div>
-</div>
-</div>
-<div class="form-floating">
-<input type="text" class="form-control" id="exampleInputphone" placeholder="Phone number">
-<label for="exampleInputphone">Phone Number</label>
-</div>
-<div class="form-floating">
-<input type="email" class="form-control" id="exampleInputEmail" placeholder="Email">
-<label for="exampleInputEmail">Email</label>
-</div>
-<div class="form-floating">
-<input type="password" class="form-control" id="exampleInputPass" placeholder="Create Password">
-<label for="exampleInputPass">Password</label>
-</div>
-<div class="form-floating">
-<input type="text" class="form-control" id="exampleInputCity" placeholder="City">
-<label for="exampleInputCity">City</label>
-</div>
-<div class="form-floating">
-<input type="text" class="form-control" id="exampleInputCode" placeholder="Invite Code">
-<label for="exampleInputCode">Invite Code</label>
-</div>
-<button type="submit" class="w-100 btn btn-lg btn-primary">Sign Up</button>
-</form>
-<p class="acclink">Already have an account?
-<a href="sign-in.html">Sign in
-<i class="icofont">double_right</i>
-</a>
-</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<footer class="theme-2">
-<div class="footer-nav-div div-padding theme-2">
-<div class="container">
-<div class="row">
-<div class="col-lg-3">
-<div class="footer-brand">
-<a href="index.html"><img src="assets/images/logo.webp" alt="logo"></a>
-</div>
-</div>
-<div class="col-lg-6">
-<ul class="social-nav">
-<li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-<li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-<li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-<li><a href="#" class="google-p"><i class="fab fa-google-plus-g"></i></a></li>
-<li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-<li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-</ul>
-</div>
-<div class="col-lg-3">
-<div class="app-download-box">
-<a href="#"><img src="assets/images/icon/google-play.webp" alt="Google play"></a>
-<a href="#"><img src="assets/images/icon/apple-store.webp" alt="Apple store"></a>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="copyright-div theme-2">
-<div class="container">
-<div class="row">
-<div class="col-lg-6">
-<p>&copy; Copyright 2022 by Tortoiz. All Right Reserved.</p>
-</div>
-<div class="col-lg-6">
-<ul class="social-nav">
-<li><a href="#">Privacy</a></li>
-<li><a href="#">Terms</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</footer>
+    <header class="theme-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="logo">
+                        <a href="index.html"><img src="assets/images/logo-main.webp" alt></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="div-padding p-t-0 signup-div user-access-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3 text-center">
+                    <h1 class="h3 mb-3 fw-normal">Please Sign Up</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="account-access sign-up">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active">
+                                <a href="#rider" class="active" aria-controls="rider" role="tab" data-toggle="tab">Sign
+                                    up to Ride</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="#driver" aria-controls="driver" role="tab" data-toggle="tab">Sign up to
+                                    Drive</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane active" id="rider">
+                                <form class="user-access-form">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="exampleFirstName"
+                                                    placeholder="name@example.com">
+                                                <label for="exampleFirstName">First Name</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="exampleLastName"
+                                                    placeholder="name@example.com">
+                                                <label for="exampleLastName">Last Name</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="examplePhone"
+                                            placeholder="Phone number">
+                                        <label for="examplePhone">Phone Number</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" id="exampleEmail" placeholder="Email">
+                                        <label for="exampleEmail">Email</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="password" class="form-control" id="examplePass"
+                                            placeholder="Create Password">
+                                        <label for="examplePass">Password</label>
+                                    </div>
+                                    <button type="submit" class="w-100 btn btn-lg btn-primary">Sign Up</button>
+                                </form>
+                                <p class="acclink">Already have an account?
+                                    <a href="sign-in.html">Sign in
+                                        <i class="icofont">double_right</i>
+                                    </a>
+                                </p>
+                            </div>
+                            <div role="tabpanel" class="tab-pane" id="driver">
+                                <form class="user-access-form">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="floatingInput"
+                                                    placeholder="name@example.com">
+                                                <label for="floatingInput">First Name</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="floatingLName"
+                                                    placeholder="name@example.com">
+                                                <label for="floatingLName">Last Name</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="exampleInputphone"
+                                            placeholder="Phone number">
+                                        <label for="exampleInputphone">Phone Number</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" id="exampleInputEmail"
+                                            placeholder="Email">
+                                        <label for="exampleInputEmail">Email</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="password" class="form-control" id="exampleInputPass"
+                                            placeholder="Create Password">
+                                        <label for="exampleInputPass">Password</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="exampleInputCity"
+                                            placeholder="City">
+                                        <label for="exampleInputCity">City</label>
+                                    </div>
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="exampleInputCode"
+                                            placeholder="Invite Code">
+                                        <label for="exampleInputCode">Invite Code</label>
+                                    </div>
+                                    <button type="submit" class="w-100 btn btn-lg btn-primary">Sign Up</button>
+                                </form>
+                                <p class="acclink">Already have an account?
+                                    <a href="sign-in.html">Sign in
+                                        <i class="icofont">double_right</i>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="theme-2">
+        <div class="footer-nav-div div-padding theme-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="footer-brand">
+                            <a href="index.html"><img src="assets/images/logo.webp" alt="logo"></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <ul class="social-nav">
+                            <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#" class="google-p"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#" class="pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="app-download-box">
+                            <a href="#"><img src="assets/images/icon/google-play.webp" alt="Google play"></a>
+                            <a href="#"><img src="assets/images/icon/apple-store.webp" alt="Apple store"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-div theme-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>&copy; Copyright 2022 by Tortoiz. All Right Reserved.</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <ul class="social-nav">
+                            <li><a href="#">Privacy</a></li>
+                            <li><a href="#">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-<script src="assets/plugins/common/common.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="assets/plugins/OwlCarousel/owl.carousel.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="assets/plugins/counterup/waypoints.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="assets/plugins/counterup/jquery.counterup.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&amp;sensor=true" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="assets/plugins/gmap3/gmap3.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="assets/plugins/common/common.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="assets/plugins/OwlCarousel/owl.carousel.min.js"
+        type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="assets/plugins/counterup/waypoints.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="assets/plugins/counterup/jquery.counterup.min.js"
+        type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&amp;sensor=true"
+        type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="assets/plugins/gmap3/gmap3.min.js" type="657b91562b469339bd4838db-text/javascript"></script>
 
-<script src="main/js/scripts.js" type="657b91562b469339bd4838db-text/javascript"></script>
-<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="657b91562b469339bd4838db-|49" defer></script></body>
+    <script src="main/js/scripts.js" type="657b91562b469339bd4838db-text/javascript"></script>
+    <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
+        data-cf-settings="657b91562b469339bd4838db-|49" defer></script>
+</body>
 
 <!-- Mirrored from carrgohtml.tortoizthemes.com/sign-up by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 21 Aug 2024 19:21:56 GMT -->
+
 </html>
