--- a/user-interface/index.html
+++ b/user-interface/index.html
@@ -43,32 +43,19 @@
               <div class="header__upper--left">
                 <div class="d-none d-lg-block logo">
                   <a href="index.html"
-                    ><img src="assets/images/YENKOR LOGO.jpg" alt="Site Logo"
+                    ><img src="assets/images/yenkor-logo.jpg" alt="Site Logo"
                   /></a>
-                </div>
+                </div>    
                 <div class="d-block d-lg-none logo w-49px">
-                  <a href="index.html"
-                    ><img src="assets/images/YENKOR LOGO.jpg" alt="Site Logo"
+                  <a href="index.html"><img src="assets/images/yenkor-logo.jpg" alt="Site Logo"
                   /></a>
                 </div>
                 <div class="search-bar">
                   <form class="form">
-                    <span class="icon icon-left"
-                      ><i class="fas fa-map-marker-alt"></i
-                    ></span>
-                    <input
-                      class="form-control"
-                      type="search"
-                      name="search-bar"
-                      placeholder="Tell us your location"
-                      id="search-bar"
-                      aria-label="search-bar"
-                    />
-                    <button
-                      class="button button-dark"
-                      type="submit"
-                      aria-label="search-btn"
-                    >
+                    <span class="icon icon-left"><i class="fas fa-map-marker-alt"></i></span>
+                    <input class="form-control" type="search" name="search-bar" placeholder="Tell us your location" id="search-bar"
+                      aria-label="search-bar" />
+                    <button class="button button-dark" type="submit" aria-label="search-btn">
                       <i class="fal fa-arrow-right"></i>
                     </button>
                   </form>
