--- a/user-interface/my-driver-dashboard.html
+++ b/user-interface/my-driver-dashboard.html
@@ -88,30 +88,16 @@
                           <a class="dropdown-item" href="on-ride.html"
                             >On Ride</a
                           >
-                          <a class="dropdown-item" href="passenger-profile.html"
-                            >Passenger</a
-                          >
-                          <a class="dropdown-item" href="ride-with-carrgo.html"
-                            >Ride with Cargo</a
-                          >
-                          <a
-                            class="dropdown-item"
-                            href="ride-with-carrgo-booked.html"
-                            >Ride with Cargo Booked</a
-                          >
+                          <a class="dropdown-item" href="passenger-profile.html">Passenger</a>
+                          <a class="dropdown-item" href="ride-with-carrgo.html">Ride with Cargo</a>
+                          <a class="dropdown-item" href="ride-with-carrgo-booked.html">Ride with Cargo Booked</a>
                         </div>
                       </div>
                     </li>
                     <li class="m-0">
                       <div class="dropdown">
-                        <a
-                          href="#"
-                          class="dropdown-toggle"
-                          id="dropdownMenuButton"
-                          data-toggle="dropdown"
-                          aria-haspopup="true"
-                          aria-expanded="false"
-                        >
+                        <a href="#" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                          aria-expanded="false">
                           <div class="media">
                             <div class="media-body">
                               <h6 class="m-0">
