--- a/user-interface/index.html
+++ b/user-interface/index.html
@@ -43,19 +43,32 @@
               <div class="header__upper--left">
                 <div class="d-none d-lg-block logo">
                   <a href="index.html"
-                    ><img src="assets/images/yenkor-logo.jpg" alt="Site Logo"
+                    ><img src="assets/images/logo-main.webp" alt="Site Logo"
                   /></a>
-                </div>    
+                </div>
                 <div class="d-block d-lg-none logo w-49px">
-                  <a href="index.html"><img src="assets/images/yenkor-logo.jpg" alt="Site Logo"
+                  <a href="index.html"
+                    ><img src="assets/images/logo-icon.webp" alt="Site Logo"
                   /></a>
                 </div>
                 <div class="search-bar">
                   <form class="form">
-                    <span class="icon icon-left"><i class="fas fa-map-marker-alt"></i></span>
-                    <input class="form-control" type="search" name="search-bar" placeholder="Tell us your location" id="search-bar"
-                      aria-label="search-bar" />
-                    <button class="button button-dark" type="submit" aria-label="search-btn">
+                    <span class="icon icon-left"
+                      ><i class="fas fa-map-marker-alt"></i
+                    ></span>
+                    <input
+                      class="form-control"
+                      type="search"
+                      name="search-bar"
+                      placeholder="Tell us your location"
+                      id="search-bar"
+                      aria-label="search-bar"
+                    />
+                    <button
+                      class="button button-dark"
+                      type="submit"
+                      aria-label="search-btn"
+                    >
                       <i class="fal fa-arrow-right"></i>
                     </button>
                   </form>
@@ -208,7 +221,7 @@
         <div class="logo">
           <a href="index.html"
             ><img
-              src="assets/images/YENKOR LOGO.jpg"
+              src="assets/images/logo-main.webp"
               width="122"
               height="32"
               alt="Site Logo"
@@ -746,7 +759,7 @@
             <div class="col-lg-3 col-sm-6">
               <div class="footer-brand">
                 <a href="index.html"
-                  ><img src="assets/images/YENKOR LOGO.jpg" alt="Logo"
+                  ><img src="assets/images/logo.webp" alt="Logo"
                 /></a>
               </div>
               <div class="footer-text pe-lg-3">
